--- a/coreinfra.yml
+++ b/coreinfra.yml
@@ -8,7 +8,7 @@ Parameters:
     Description: A name for the environment that this cloudformation will be part of.
   CertificateArn:
     Type: String
-    Description: ARN of the Amazon Certificate Manager SSL certificate to use for this app
+    Description: ARN of the Amazon Certificate Manager SSL certificate for your domain to use for this service
 Mappings:
   # Hard values for the subnet masks. These masks define
   # the range of internal IP addresses that can be assigned.
@@ -292,6 +292,11 @@ Outputs:
     Value: !Ref PublicLoadBalancerListenerHTTP
     Export:
       Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicListenerHTTP' ] ]
+  HTTPSListener:
+    Description: The ARN of the public load balancer's HTTPS Listener
+    Value: !Ref PublicLoadBalancerListenerHTTPS
+    Export:
+      Name: !Join [ ':', [ !Ref 'EnvironmentName', 'PublicListenerHTTPS' ] ]
   VPCId:
     Description: The ID of the VPC that this stack is deployed in
     Value: !Ref 'VPC'
