--- a/serviceinfra_cfn.yml
+++ b/serviceinfra_cfn.yml
@@ -1,24 +1,23 @@
 AWSTemplateFormatVersion: '2010-09-09'
 Description: lex/twilio voice integration service
+
 Parameters:
   EnvironmentName:
     Type: String
     Default: lex-twiliovoice-stage
-    Description: A name for the environment that this cloudformation will be part of.
-                 Used to locate other resources in the same environment.
+    Description: Environment name. Same name from the previous deployment to refer to the outputs
   ServiceName:
     Type: String
     Default: lexbot
-    Description: A name for the service
+    Description: Name of the service
   ImageUrl:
     Type: String
     Default: "lex-twiliovoice-image"
-    Description: The url of a docker image that contains the application process that
-                 will handle the traffic for this service
+    Description: The url of a docker image that contains the service (example;xxxxxxx.dkr.ecr.us-west-2.amazonaws.com/lex-twiliovoice:latest)
   ContainerPort:
     Type: Number
     Default: 8080
-    Description: What port number the application inside the docker container is binding to
+    Description: Port number where the service is running
   ContainerCpu:
     Type: Number
     Default: 1024
@@ -26,19 +25,7 @@ Parameters:
   ContainerMemory:
     Type: Number
     Default: 2048
-    Description: How much memory in megabytes to give the container
-  Path:
-    Type: String
-    Default: "*"
-    Description: A path on the public load balancer that this service
-                 should be connected to. Use * to send all load balancer
-                 traffic to this service.
-  Priority:
-    Type: Number
-    Default: 1
-    Description: The priority for the routing rule added to the load balancer.
-                 This only applies if your have multiple services which have been
-                 assigned to different paths on the load balancer.
+    Description: How much memory in MB to give the container
   DesiredCount:
     Type: Number
     Default: 1
@@ -46,7 +33,7 @@ Parameters:
   TwilioAuthToken:
     Type: String
     Default: "TwilioAuthToken"
-    Description: Auth token from twilio console
+    Description: Auth token from the twilio console
   IAMAccessKeyId:
     Type: String
     Default: "IAM User AccessKeyId Here"
@@ -66,14 +53,11 @@ Parameters:
     
 
 Resources:
-  # A log group for storing the container logs for this service
   LogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: !Join ['-', [!Ref 'EnvironmentName', 'service', !Ref 'ServiceName']]
-
-  # The task definition. This is a simple metadata description of what
-  # container to run, and what resource requirements it has.
+  #Task definition and container definitions
   TaskDefinition:
     Type: AWS::ECS::TaskDefinition
     Properties:
@@ -119,9 +103,7 @@ Resources:
               awslogs-region: !Ref 'AWS::Region'
               awslogs-stream-prefix: !Ref 'ServiceName'
 
-  # The service. The service is a resource which allows you to run multiple
-  # copies of a type of task, and gather up their logs and metrics, as well
-  # as monitor the number of running tasks and replace any that have crashed
+  #ECS Service
   Service:
     Type: AWS::ECS::Service
     DependsOn:
@@ -153,11 +135,7 @@ Resources:
           ContainerPort: !Ref 'ContainerPort'
           TargetGroupArn: !Ref 'TargetGroup'
 
-  # A target group. This is used for keeping track of all the tasks, and
-  # what IP addresses / port numbers they have. You can query it yourself,
-  # to use the addresses yourself, but most often this target group is just
-  # connected to an application load balancer, or network load balancer, so
-  # it can automatically distribute traffic across all the targets.
+  #Target group
   TargetGroup:
     Type: AWS::ElasticLoadBalancingV2::TargetGroup
     Properties:
@@ -191,11 +169,11 @@ Resources:
           Type: 'forward'
       Conditions:
         - Field: path-pattern
-          Values: [!Ref 'Path']
+          Values: ['*']
       ListenerArn:
         Fn::ImportValue:
           !Join [':', [!Ref 'EnvironmentName', 'PublicListenerHTTP']]
-      Priority: !Ref 'Priority'
+      Priority: 1
   HTTPSRule:
     Type: AWS::ElasticLoadBalancingV2::ListenerRule
     Properties:
@@ -204,11 +182,11 @@ Resources:
           Type: 'forward'
       Conditions:
         - Field: path-pattern
-          Values: [!Ref 'Path']
+          Values: ['*']
       ListenerArn:
         Fn::ImportValue:
           !Join [':', [!Ref 'EnvironmentName', 'PublicListenerHTTPS']]
-      Priority: !Ref 'Priority'
+      Priority: 1
 
 
  
